--- a/src/styles/Shop.module.scss
+++ b/src/styles/Shop.module.scss
@@ -1,3 +1,8 @@
+
+
+
+$red: #FF0000;
+
 .shop{
     padding: 0 100px;
     width: 100%;
@@ -8,6 +13,12 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
+            .shop_link{
+                cursor: pointer;
+            }
+            .button_sale{
+                color: $red;
+            }
             button{
                 padding: 4px  60px ;
                 font-family: 'PT Mono';
@@ -15,10 +26,10 @@
                 font-weight: 400;
                 font-size: 20px;
                 color: #000000;
-                a{
-                    text-decoration: none;
-                    color: #000000;
-                }
+                border: none;
+            }
+            .shop_cart{
+                cursor: pointer;
             }
         }
     }
