--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -1,18 +1,19 @@
- .bird {
-     padding-left: 290px;
-     width: 705px;
-     height: 459px;
- }
- 
- .about_text {
-     width: 706px;
-     height: 196px;
-     padding-left: 285px;
-     padding-top: 70px;
-     font-family: 'PT Mono';
-     font-style: normal;
-     line-height: 28px;
-     font-size: 25px;
-     line-height: 28px;
-     text-align: center;
- }
+.about {
+    .bird {
+        padding-left: 290px;
+        width: 705px;
+        height: 459px;
+    }
+    .about_text {
+        width: 706px;
+        height: 196px;
+        padding-left: 285px;
+        padding-top: 70px;
+        font-family: 'PT Mono';
+        font-style: normal;
+        line-height: 28px;
+        font-size: 25px;
+        line-height: 28px;
+        text-align: center;
+    }
+}
