--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,12 +1,12 @@
-.nav{
-    .nav_row{
-        .nav_menu{
+.nav {
+    .nav_row {
+        .nav_menu {
             text-align: left;
             padding: 0;
-            .nav_link{
+            .nav_link {
                 list-style: none;
                 padding: 15px 0;
-                a{
+                a {
                     list-style: none;
                     text-decoration: none;
                     font-family: 'PT Mono';
@@ -15,9 +15,8 @@
                     font-size: 20px;
                     line-height: 22px;
                     color: #000000
-
                 }
-                a:hover{
+                a:hover {
                     font-family: 'PT Mono';
                     font-style: normal;
                     font-weight: 700;
@@ -26,7 +25,7 @@
                     color: #000000;
                 }
             }
-            .nav_button{
+            .nav_button {
                 margin-top: 15px;
                 padding: 8px 55px;
                 background: #000000;
@@ -38,6 +37,9 @@
                 line-height: 22px;
                 border: none;
                 color: #FFFFFF;
+            }
+            .nav_button:hover {
+                cursor: pointer;
             }
         }
     }
