--- a/src/styles/Services.module.scss
+++ b/src/styles/Services.module.scss
@@ -28,6 +28,7 @@ $grey: #C4C4C4;
             }
             .button1 {
                 width: 231px;
+                height: 39px;
                 padding-bottom: 11px;
                 background-color: $black;
                 margin-top: 45px;
@@ -72,6 +73,7 @@ $grey: #C4C4C4;
                 padding-top: 21px;
             }
             .button2 {
+                height: 39px;
                 background-color: $grey;
                 color: $white;
                 margin-top: 137px;
