--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -1,5 +1,6 @@
 .contacts {
     margin-top: 40px;
+    padding: 0px 100px;
     .contacts_text {
         display: inline-block;
         margin-left: 300px;
