--- a/src/styles/Services.module.scss
+++ b/src/styles/Services.module.scss
@@ -2,6 +2,7 @@ $black: #000000;
 $white: #FFFF;
 $grey: #C4C4C4;
 .services {
+    padding: 0px 100px;
     .block1 {
         .block1_text {
             vertical-align: top;
