--- a/src/components/Shop/Default.module.scss
+++ b/src/components/Shop/Default.module.scss
@@ -50,15 +50,15 @@
             .left_info{
                 position: relative;
                 .bottom_map{
-                    width: 600px;
-                    height: 400px;
+                    width: 700px;
+                    height: 470px;
 
                 }
-                .botto_shop{
-                    width: 245px;
-                    height: 210px;
+                .bottom_shop{
+                    width: 265px;
+                    height: 250px;
                     position: absolute;
-                    bottom: 0;
+                    bottom: 3px;
                     right: 0;
                 }
                 .bottom_info{
@@ -68,7 +68,7 @@
                     display: flex;
                     flex-direction: row;
                     .info_street{
-                        height: 175px;
+                        height: 200px;
                         width: 80px;
                         background: #000000;
                         padding: 10px;
@@ -81,8 +81,8 @@
                     }
                     .info_network{
                         background: #FFFFFF;
-                        width: 125px;
-                        height: 175px;
+                        width: 145px;
+                        height: 200px;
                         padding: 10px;
                         span{
                             font-style: normal;
@@ -129,13 +129,13 @@
             }
             .right_sale{
                 background-image: url(../../assets/images/sale_bg.png);
-                height: 363px;
+                height: 430px;
                 display: flex;
                 padding: 20px 20px;
                 justify-content: space-between;
                 flex-direction: column;
                 background-size: cover;
-                width: 250px;
+                width: 300px;
                 button{
                     cursor: pointer;
                     background: #000000;
